# nvidia-shim

./: README.md  pyproject.toml
src/nvidia_shim/flash_attn_3/: __init__.py
src/nvidia_shim/nvidia/: __init__.py
