[project]
authors = [{name = "fecet", email = "xiezej@gmail.com"}]
dependencies = []
name = "nvidia-shim"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://repo.prefix.dev/meta-forge", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nvidia_shim = { path = ".", editable = true }

[tool.pixi.tasks]
