[project]
authors = [{name = "fecet", email = "xiezej@gmail.com"}]
dependencies = []
description = "A compatibility layer for handling NVIDIA package differences between PyPI and Conda distributions"
name = "nvidia-shim"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/nvidia_shim/nvidia",
  "src/nvidia_shim/flash_attn_3",
]

[tool.pixi.workspace]
channels = ["https://repo.prefix.dev/meta-forge", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nvidia-shim = { path = ".", editable = false }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = "*"
pip = "*"
